# SwarmLab

./: .gitignore  README.md  pyproject.toml
docs/: results.md
swarmlab/: __init__.py
swarmlab/algorithms/: __init__.py  base.py  de.py  firefly.py  hybrid.py  pso.py
swarmlab/analysis/: __init__.py  ablation.py
swarmlab/benchmarks/: __init__.py  functions.py
tests/: test_swarm.py
