[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarmlab"
version = "2.0.0"
description = "Swarm intelligence simulation framework — PSO, Firefly, Hybrid, DE with ablation tooling."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Naveen Kumar Baskaran"}]
keywords = ["swarm", "pso", "firefly", "optimization", "metaheuristic", "evolutionary", "simulation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5", "mypy>=1.10"]

[tool.pytest.ini_options]
testpaths = ["tests"]
